--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,61 +1,119 @@
-name: Build Go GUI App
+name: Build and Release Go GUI App
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+  release:
+    types: [published]
 
 jobs:
   build-linux:
     name: Build Linux
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: "1.24"
-      - name: Install GTK
-        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev
+      - name: Install GUI dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libgtk-3-dev \
+            libdbusmenu-glib-dev \
+            libayatana-appindicator3-dev \
+            libayatana-indicator3-dev
       - name: Build Linux Binary
         run: |
           export CGO_ENABLED=1
-          go build -ldflags="-s -w" -o go-file-fusion-rename-linux main.go
-      - name: Upload Artifact
+          go build -ldflags="-s -w" -o file-fusion-rename-linux main.go
+      - name: Upload Linux Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: go-file-fusion-rename-linux
-          path: go-file-fusion-rename-linux
+          name: file-fusion-rename-linux
+          path: file-fusion-rename-linux
 
   build-windows:
     name: Build Windows
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: "1.24"
       - name: Build Windows Binary
         run: |
           set CGO_ENABLED=1
-          go build -ldflags="-s -w" -o go-file-fusion-rename.exe main.go
+          go build -ldflags="-s -w" -o file-fusion-rename-windows.exe main.go
       - uses: actions/upload-artifact@v4
         with:
-          name: go-file-fusion-rename-windows
-          path: go-file-fusion-rename.exe
+          name: file-fusion-rename-windows
+          path: file-fusion-rename-windows.exe
 
   build-macos:
     name: Build macOS
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: "1.24"
       - name: Build macOS Binary
         run: |
           export CGO_ENABLED=1
-          go build -ldflags="-s -w" -o go-file-fusion-rename-macos main.go
+          go build -ldflags="-s -w" -o file-fusion-rename-macos main.go
       - uses: actions/upload-artifact@v4
         with:
-          name: go-file-fusion-rename-macos
-          path: go-file-fusion-rename-macos
+          name: file-fusion-rename-macos
+          path: file-fusion-rename-macos
+
+  release:
+    name: Release Binaries
+    runs-on: ubuntu-latest
+    needs: [build-linux, build-windows, build-macos]
+    steps:
+      - uses: actions/checkout@v3
+
+      # 下载之前构建好的 artifact
+      - name: Download Linux Binary
+        uses: actions/download-artifact@v4
+        with:
+          name: file-fusion-rename-linux
+          path: ./release
+
+      - name: Download Windows Binary
+        uses: actions/download-artifact@v4
+        with:
+          name: file-fusion-rename-windows
+          path: ./release
+
+      - name: Download macOS Binary
+        uses: actions/download-artifact@v4
+        with:
+          name: file-fusion-rename-macos
+          path: ./release
+
+      - name: Create Tag
+        id: tag
+        run: |
+          TAG="v$(date +'%Y.%m.%d')-$(git rev-parse --short HEAD)"
+          echo "TAG=$TAG" >> $GITHUB_ENV
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag $TAG
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} $TAG
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ env.TAG }}
+          files: |
+            ./file-fusion-rename-linux
+            ./file-fusion-rename-windows.exe
+            ./file-fusion-rename-macos
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
