--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-linux, build-windows, build-macos]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: false
 
       - name: Download Linux Binary
         uses: actions/download-artifact@v4
@@ -96,7 +99,7 @@ jobs:
           name: file-fusion-rename-macos
           path: ./release
 
-      - name: Create Tag
+      - name: Auto Create Tag
         id: tag
         run: |
           TAG="v$(date +'%Y.%m.%d')-$(git rev-parse --short HEAD)"
@@ -111,8 +114,8 @@ jobs:
         with:
           tag_name: ${{ env.TAG }}
           files: |
-            ./file-fusion-rename-linux
-            ./file-fusion-rename-windows.exe
-            ./file-fusion-rename-macos
+            ./release/file-fusion-rename-linux
+            ./release/file-fusion-rename-windows.exe
+            ./release/file-fusion-rename-macos
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
