--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
 
   build:
     name: Build Applications
-    needs: [test]
+    # needs: [test]
     # if: always() && needs.test.result == 'success'
     strategy:
       matrix:
