--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,39 +3,40 @@ name: Build and Release Go GUI App
 on:
   push:
     branches:
-      - main
+      - "**"
+    tags:
+      - "v*"
   pull_request:
     branches:
-      - main
+      - "**"
 
 jobs:
-  # test:
-  #   name: Run Tests
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-go@v5
-  #       with:
-  #         go-version: "1.24"
-  #     - name: Install GUI dependencies
-  #       run: |
-  #         sudo apt-get update
-  #         sudo apt-get install -y \
-  #           libgtk-3-dev \
-  #           libdbusmenu-glib-dev \
-  #           libayatana-appindicator3-dev \
-  #           libayatana-indicator3-dev
-  #     - name: Run tests
-  #       run: go test -v ./...
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.24"
+      - name: Install GUI dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libgtk-3-dev \
+            libdbusmenu-glib-dev \
+            libayatana-appindicator3-dev \
+            libayatana-indicator3-dev
+      - name: Run tests
+        run: go test -v ./...
 
   build:
     name: Build Applications
-    # needs: [test]
-    # if: always() && needs.test.result == 'success'
+    needs: [test]
+    if: always() && needs.test.result == 'success' && (github.ref_name == 'main' || startsWith(github.ref, 'refs/tags/'))
     strategy:
       matrix:
-        # os: [ubuntu-latest, windows-latest, macos-latest]
-        os: [macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -50,6 +51,8 @@ jobs:
     needs: [build]
     permissions:
       contents: write
+
+    if: github.ref_name == 'main' || startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v4
         with:
@@ -61,4 +64,4 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           version-bump: "patch"
-          artifacts: "file-fusion-rename-macos"
+          artifacts: "file-fusion-rename-linux,file-fusion-rename-windows.exe,file-fusion-rename-macos"
